feat: :art: get profile data use case
