# server/src/docs/swagger.json
@@ -81,6 +81,73 @@
         }
       }
     },
+    "/profile": {
+      "get": {
+        "summary": "Recuperar Perfil",
+        "description": "Essa rota é responsável recuperar os dados da conta autenticada",
+        "tags": ["Perfil"],
+        "security": [{ "bearerAuth": [] }],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string",
+                      "format": "uuid"
+                    },
+                    "name": {
+                      "type": "string"
+                    },
+                    "email": {
+                      "type": "string"
+                    },
+                    "avatar_file": {
+                      "type": "string"
+                    },
+                    "account_type": {
+                      "type": "string"
+                    },
+                    "created_at": {
+                      "type": "string",
+                      "format": "date-time"
+                    },
+                    "updated_at": {
+                      "type": "string",
+                      "format": "date-time"
+                    }
+                  }
+                },
+                "examples": {
+                  "response": {
+                    "value": [
+                      {
+                        "id": "3fa85f64-5717-4562-b3fc-2c963f66afa6",
+                        "name": "Jhon Doe",
+                        "email": "jhondoe@mail.com",
+                        "avatar_file": "file_name.png",
+                        "account_type": "ADMIN",
+                        "created_at": "2023-01-01T23:59:59.999Z",
+                        "updated_at": "2023-01-01T23:59:59.999Z"
+                      }
+                    ]
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized - Invalid token!"
+          },
+          "404": {
+            "description": "Not Found - Token not found! - User not found!"
+          }
+        }
+      }
+    },
     "/admins": {
       "get": {
         "summary": "Listar Administradores",
