# server/src/modules/users/infra/http/routes/profile.routes.ts
@@ -1,0 +1,14 @@
+import { Router } from 'express'
+
+import { GetProfileDataController } from '@modules/users/useCases/getProfileData/GetProfileDataController'
+import { ensureAuthenticated } from '@shared/infra/http/middlewares/ensureAuthenticated'
+
+const getProfileDataController = new GetProfileDataController()
+
+export const profileRoutes = Router()
+
+profileRoutes.get(
+  '/',
+  ensureAuthenticated,
+  getProfileDataController.handle
+)
